err/django-sitemenu.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_sitemenu-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sitemenu'...
Compiling './lib/python3.5/site-packages/sitemenu/__init__.py'...
***   File "./lib/python3.5/site-packages/sitemenu/__init__.py", line 9
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sitemenu/locale'...
Listing './lib/python3.5/site-packages/sitemenu/locale/lv'...
Listing './lib/python3.5/site-packages/sitemenu/locale/lv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/sitemenu/locale/ru'...
Listing './lib/python3.5/site-packages/sitemenu/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/sitemenu/mixins'...
Listing './lib/python3.5/site-packages/sitemenu/plugins'...
Listing './lib/python3.5/site-packages/sitemenu/plugins/feedback_form'...
Listing './lib/python3.5/site-packages/sitemenu/plugins/feedback_form/static'...
Listing './lib/python3.5/site-packages/sitemenu/plugins/feedback_form/static/sitemenu'...
Listing './lib/python3.5/site-packages/sitemenu/plugins/feedback_form/static/sitemenu/plugins'...
Listing './lib/python3.5/site-packages/sitemenu/plugins/feedback_form/static/sitemenu/plugins/contactform'...
Listing './lib/python3.5/site-packages/sitemenu/plugins/feedback_form/templates'...
Listing './lib/python3.5/site-packages/sitemenu/plugins/feedback_form/templates/sitemenu'...
Listing './lib/python3.5/site-packages/sitemenu/plugins/feedback_form/templates/sitemenu/plugins'...
Listing './lib/python3.5/site-packages/sitemenu/plugins/feedback_form/templates/sitemenu/plugins/feedback_form'...
Listing './lib/python3.5/site-packages/sitemenu/plugins/feedback_form/templatetags'...
Listing './lib/python3.5/site-packages/sitemenu/static'...
Listing './lib/python3.5/site-packages/sitemenu/static/admin'...
Listing './lib/python3.5/site-packages/sitemenu/static/admin/sitemenu'...
Listing './lib/python3.5/site-packages/sitemenu/static/admin/sitemenu/css'...
Listing './lib/python3.5/site-packages/sitemenu/static/admin/sitemenu/css/no-theme'...
Listing './lib/python3.5/site-packages/sitemenu/static/admin/sitemenu/img'...
Listing './lib/python3.5/site-packages/sitemenu/static/admin/sitemenu/js'...
Listing './lib/python3.5/site-packages/sitemenu/static/sitemenu'...
Listing './lib/python3.5/site-packages/sitemenu/static/sitemenu/css'...
Listing './lib/python3.5/site-packages/sitemenu/templates'...
Listing './lib/python3.5/site-packages/sitemenu/templates/admin'...
Listing './lib/python3.5/site-packages/sitemenu/templates/admin/sitemenu'...
Listing './lib/python3.5/site-packages/sitemenu/templates/sitemenu'...
Listing './lib/python3.5/site-packages/sitemenu/templatetags'...
Listing './share'...
Listing './share/python-wheels'...
